--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "frappe-react-sdk": "^1.2.9",
     "frappe-ui": "^0.0.105",
     "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
     "primevue": "^3.32.2",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12"
